[fix]changed height of get started. less whitespace

--- a/css/main.css
+++ b/css/main.css
@@ -34,6 +34,7 @@
 
 .parallax-container{    
     color: white;
+    height: 350px;
 }
 .parallax{
     height: 180px;
